# -

./: .gitignore  ARCHITECTURE.md  README.md  compile_errors.txt  fix_cards.py  fix_invoice_number.py  fix_invoice_ui.py  fix_manager.cjs  fix_p1.txt  fix_p2.txt  fix_recognition.py  git_diff.txt  git_diff_utf8.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  rebuild4.py  update_layout.py  update_preview.py  vite.config.ts
src-tauri/: Cargo.toml  compile.txt  compile_err.txt  compile_errors.txt  compile_json.txt  errors_only.txt  output.docx  playwright_helper.js  rename_files.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  automation.rs  commands.rs  db.rs  lib.rs  logger.rs  models.rs  plugin_registry.rs  rag.rs  token_usage.rs  tools.rs
src-tauri/src/agent/: agent_factory.rs  agent_registry.rs  blueprint_engine.rs  constraint_extractor.rs  context.rs  context_manager.rs  cost_tracker.rs  env_snapshot.rs  executor.rs  experience.rs  failure_analyzer.rs  llm_client.rs  memory.rs  mod.rs  model_router.rs  planner.rs  prompt_builder.rs  react_loop.rs  reflection.rs  run_trace.rs  ssot_validator.rs  stop_judge.rs  task_manifest.rs  task_structurer.rs  template_engine.rs  template_matcher.rs  tool_defs.rs  tool_fallback.rs  tool_knowledge.rs  tool_policy.rs  tool_runtime.rs  types.rs
src-tauri/src/mcp/: client.rs  commands.rs  mod.rs  server.rs
src-tauri/src/utils/: mod.rs  office_converter.rs
src-tauri/src/workflow/: browser.rs  engine.rs  experience.rs  migration.rs  mod.rs  model_router.rs  node_executor.rs  (+4 more)
(+69 files in other folders)
