[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.50.0", features = ["full"] }
docx-rs = "0.4.19"
umya-spreadsheet = "2.3.3"
notify = "8.2.0"
chrono = "0.4.44"
uuid = { version = "1.20.0", features = ["v4"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
zip = "2.2.0"
regex = "1.10"
reqwest = { version = "0.13.2", features = ["json"] }
pdf-extract = "0.7.2"
base64 = "0.22"
mcp-sdk = "0.0.3"
urlencoding = "2.1"
futures = "0.3"
eyre = "0.6.12"
tracing = "0.1.44"
fastembed = "4"
calamine = "0.26"
